Sun Sep  3 02:34:55 2006  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/unix.rb (DRbUNIXSocket#close): don't get path if client mode.
	  [ruby-dev:29417]

Sun Sep  3 01:45:17 2006  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/acl.rb (ACLEntry#initialize): examine whether '*' is
	  included before IPAddr.new. [ruby-dev:29406]

Sat Sep  2 13:23:01 2006  Tanaka Akira  <akr@fsij.org>

	* common.mk (ia64.o): use the compiler driver to assemble ia64.s
	  to use appropriate ABI.

Sat Sep  2 03:36:22 2006  Tanaka Akira  <akr@fsij.org>

	* common.mk, configure.in, defines.h, eval.c, gc.c, main.c,
	  numeric.c, ruby.h, ia64.s: backport IA64 HP-UX support.

Fri Sep  1 13:52:57 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/font.rb: TkFont#current_configinfo() doesn't work
	  on Tcl/Tk8.x.

Thu Aug 31 12:46:55 2006  why the lucky stiff  <why@ruby-lang.org>

	* eval.c (ruby_init): rename top_cref to ruby_top_cref and export,
	  along with ruby_cref, for use by the sandbox. [ruby-core:08762]

	* node.h: ditto.

Tue Aug 29 19:10:10 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_s_create): fixed memory leak, based on the patch
	  by Kent Sibilev <ksruby at gmail.com>.  fixed: [ruby-talk:211233]

Mon Aug 28 11:36:02 2006  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/parsers/parse_rb.rb: Fix typo.  Submitted by
	  <calamitas at gmail.com>.  [ruby-core:08724]

Mon Aug 28 07:53:44 2006  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/ri/ri_formatter.rb: Don't unescape HTML in HtmlFormatter.
	  Submitted by Kent Sibilev <ksruby at gmail.com>.  [ruby-core:08392].

Mon Aug 28 07:25:45 2006  Eric Hodel  <drbrain@segment7.net>

	* file.c (File#size?): Fix documentation submitted by Rick Ohnemus.
	  ruby-Bugs-5529.  [ruby-core:08725]

Sat Aug 26 08:07:13 2006  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb, lib/date/format.rb: updated based on date2 3.8.2.

Fri Aug 25 22:32:04 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
